# rustclaw

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml  docs.yml
examples/: search_bench.rs
src/: config.rs  embedding.rs  export.rs  hnsw.rs  hybrid.rs  internal.rs  lib.rs  main.rs  manager.rs  mcp.rs  mmr.rs  sessions.rs  simd.rs  sqlite.rs  temporal_decay.rs  types.rs  watcher.rs  web.rs
src/cron/: schedule.rs  service.rs  store.rs  types.rs
src/daemon/: launchd.rs  mod.rs  systemd.rs  types.rs
tests/: cron_integration.rs  hnsw_integration.rs  mcp_integration.rs  web_integration.rs
