[package]
name = "rustclaw"
version = "0.1.0"
edition = "2024"
description = "Memory search engine with hybrid vector/keyword search, MMR re-ranking, and temporal decay - Rust port of OpenClaw's memory system"

[dependencies]
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
