[package]
name = "rustclaw"
version = "0.2.0"
edition = "2024"
description = "Memory search engine with hybrid vector/keyword search, MMR re-ranking, and temporal decay - Rust port of OpenClaw's memory system"

[dependencies]
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
thiserror = "2"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
notify = "8"
wide = "0.7"

[dev-dependencies]
tempfile = "3"
