[package]
name = "rustclaw"
version = "0.5.0"
edition = "2024"
description = "Memory search engine with hybrid vector/keyword search, MMR re-ranking, and temporal decay - Rust port of OpenClaw's memory system"
license = "MIT"
repository = "https://github.com/rsasaki0109/rustclaw"
keywords = ["search", "memory", "embedding", "mcp", "fts5"]
categories = ["text-processing", "database"]
exclude = [".github/", "target/", "PLAN.md"]

[features]
default = []
fastembed = ["dep:fastembed"]

[dependencies]
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
thiserror = "2"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
notify = "8"
wide = "0.7"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
async-trait = "0.1"
cron = "0.13"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
rayon = "1"
fastembed = { version = "4.9.1", optional = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[[example]]
name = "search_bench"
path = "examples/search_bench.rs"
